# rust-captcha

./: .gitignore  .travis.yml  Cargo.toml  Changelog  Makefile  README.md  TODO  build.rs  config.json  start_redis.sh  test.sh
docker/: Dockerfile  Dockerfile.demo  Makefile  README.md  run.sh  run_demo.sh  test.sh
fonts/: index.html
magickwand/: Makefile  example.c  image.c  image.h
magicwand/: Makefile  example.c  image.c  image.h  wand.c
src/: arguments.rs  captcha.rs  captchatools.rs  config.rs  executor.rs  generator.rs  image.rs  lib.rs  main.rs  persistence.rs  rest_methods.rs  session.rs
src/methods/: mod.rs
src/persistence/: error.rs  item.rs  mod.rs
src/requesthandler/: mod.rs
src/validation/: mod.rs
testing/: performance.py  run.py  test.py
